# upgraded-guacamole

./: .gitignore  README.md  SECURITY.md  go.mod  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  go-core-ci.yml  go-security.yml  secret-scan.yml
cmd/sentinel/: main.go
docs/: GO_CORE_BASELINE.md  THREAT_MODEL_GO.md  rename-plan.md  repository-architecture.md  stage-2-cryptographic-verifier.md  stage-3-policy-authorization.md  stage-4-trustkey-role-binding.md  stage-5-persistent-registries.md  synthetic-pilot-run.md
internal/crypto/: digest.go
internal/evidence/: chain.go  chain_test.go  record.go
internal/policy/: policy.go  policy_test.go
internal/receipt/: receipt.go  receipt_test.go
internal/registry/: trust.go
registries/: policy-registry.bootstrap.json  trust-registry.bootstrap.json
schemas/: evidence.schema.json
scripts/: run_pilot_evidence.py
src/sentinel_core/: __init__.py  crypto.py  hashchain.py  pilot.py  policy.py  registry_loader.py  schema.py  trust.py  verifier.py
tests/: test_hashchain.py  test_pilot_flow.py  test_policy_authorization.py  test_registry_loader.py  test_schema_and_verifier.py  test_stage4_role_binding.py  test_time_aware_trust.py  test_trust_and_signature.py
tests/fixtures/: evidence_schema_violation.json  evidence_wrong_previous_hash.json  valid_evidence.json
